cmake_minimum_required(VERSION 3.29)
project(seekify)

set(CMAKE_CXX_STANDARD 20)

add_executable(seekify main.cpp Graph.cpp)
set(FLTK_SOURCE_DIR "${PROJECT_SOURCE_DIR}/fltk-1.4.2-source/fltk/fltk-1.4.2")
target_compile_options(seekify PRIVATE -static-libstdc++ -static-libgcc)
target_link_options(seekify PRIVATE -static -static-libgcc -static-libstdc++ -pthread)
add_subdirectory(${FLTK_SOURCE_DIR})
include_directories("${FLTK_SOURCE_DIR}/CMake")
target_link_libraries(seekify PRIVATE fltk::fltk fltk_images)
configure_file(${CMAKE_SOURCE_DIR}/data/dataset.csv ${CMAKE_BINARY_DIR}/dataset.csv COPYONLY)
configure_file(${CMAKE_SOURCE_DIR}/data/gifs/head.gif ${CMAKE_BINARY_DIR}/head.gif COPYONLY)
configure_file(${CMAKE_SOURCE_DIR}/data/gifs/superseekify.gif ${CMAKE_BINARY_DIR}/superseekify.gif COPYONLY)